Replace to original parser models